@@ -1,2 +1,7 @@
 # CommandProducerConsumer
  Command Producer Consumer
+## Running The Application
+Before running the application through main, please add H2 to library, H2 jar is located in database package
+
+## Test
+If tests end with InitializerError and --add-opens=java.base/java.lang=ALL-UNNAMED to your run config
